Enhancements sponsored by Ladybug Tools.

Updated eplus_uvf to work with IDF version 9.x, checking version number.

Fix to glarendx issues with dgi calculation.

Made it so rmtxop and dctimestep undo any exposure applied to Radiance
pictures they may load.

Added robjutil utility to manipulate Wavefront .OBJ files.

Fixed a crash related to rtrace -om or -oM with mesh instances containing
materials.

Improved rtrace flushing function to handle any value for -x without
deadlock on controlling process.

Eliminated unnecessary start-up procedures for rtrace when only ray-casting
is needed (i.e., no tracing or value output).

Improved isotropic sampling method in bsdf2ttree using "zipper" approach
applied in genBSDF.

Added limit to memory used by high-resolution tensor tree BSDFs for
cumulative cache during MC sampling (rendering).  Limit set to 250MBytes
per BSDF for standard architectures.

Added -n and -s options to bsdf2ttree to provide some user control
over super-sampling.

Improved surface normal codec used by ambient file to store orthonormal
directions exactly.

Improved peak extraction method, which was undervaluing transmission
in many cases.

New version of evalglare from Jan Wienold.

Added -u option to gendaymtx to elide data columns (time steps) when
the sun is not visible above the horizon.

=========================
Version 5.4

Added rcollate -c option to force operation to continue even if it
seems unnecessary.  Made tool more robust.

Added -t option to rcontrib (and rfluxmtx) to report progress after the
given number of seconds.

Added "test" target to makeall to run unit tests.

Modified bsdf2ttree to allow different parameters per input SIR file.

Fixed issues with very large matrix files (> 2GB) in dctimestep, rmtxop,
and rcollate.

Added -rf and -rb options to rmtxop to load front or back reflectance
matrix data from XML file rather than transmission.  (Lars Grobe suggested.)